# wecom-local

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: compatibility.md  macos-permissions.md  release-readiness.md  safety.md  schema.md
docs/adr/: 0001-rust-core-agent-skill-distribution.md  0002-wecom-local-cli-name-and-boundary.md  0003-runtime-authorization-through-sudo.md  0004-members-basic-default-full-opt-in.md  0005-keep-analysis-skills-local-and-evidence-based.md
docs/release-notes/: v0.1.0.md  v0.1.1.md
opencli/: README.md
scripts/: install-codex-skills.sh  review-pr.sh
skills/: README.md
skills/claude/: SKILL.md
skills/codex/: SKILL.md
skills/hermes/: SKILL.md
skills/wc-audit/: SKILL.md
skills/wc-brief/: SKILL.md
skills/wc-draft/: SKILL.md
skills/wc-local/: SKILL.md
skills/wc-scan/: SKILL.md
skills/wc-style/: SKILL.md
src/: auth.rs  cli.rs  conversations.rs  decoder.rs  doctor.rs  local_query.rs  main.rs  members.rs  output.rs  runtime_bridge.rs  stats.rs  store_probe.rs
