[package]
name = "wecom-local"
version = "0.1.0"
edition = "2021"
description = "Local read-only WeCom Desktop query CLI for humans and AI agents"
license = "Apache-2.0"
repository = "https://github.com/BobbyCats/wecom-local"
keywords = ["wecom", "wework", "chat", "history", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
